{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Navigation",
            "id": "03605a1c-fa3d-4324-9ac5-f2ffc2ff0510",
            "actions": [
                {
                    "name": "PlayerMovement",
                    "type": "Button",
                    "id": "35108bd3-6026-415e-bef0-4cd0fb532aa8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "6bd4b236-8791-47b1-804e-4d27ae38c071",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cd942ca8-b4eb-4136-9737-dc6a8beb6cd5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b56adc1-de4d-4307-9e10-5e37ff0a0159",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}